syntax = "proto3";

package Kaleido.Grpc.CurrencyRates;

import "google/protobuf/timestamp.proto";

message BaseRevision {
    string key = 1;
    int32 revision = 2;
    string action = 3;
    google.protobuf.Timestamp createdAt = 4;
    string status = 5;
}

message CurrencyRate {
    string originKey = 1;
    string targetKey = 2;
    double rate = 3;
}

message CurrencyRateRequest {
    string key = 1;
}

message CurrencyRateRevisionRequest {
    string key = 1;
    google.protobuf.Timestamp createdAt = 2;
}

message CurrencyRateActionRequest {
    string key = 1;
    CurrencyRate currencyRate = 2;
}

message CurrencyConversionRequest {
    string originKey = 1;
    string targetKey = 2;
}

message EmptyRequest {}

message CurrencyRateResponse {
    string key = 1;
    CurrencyRate currencyRate = 2;
    BaseRevision revision = 3;
}

message CurrencyRateListResponse {
    repeated CurrencyRateResponse currencyRates = 1;
}

